--- a/index.html
+++ b/index.html
@@ -4,4 +4,10 @@ description: Not stupid description
 layout: empty
 permalink: /
 ---
-<h1>Not stupid H1</h1>
+<form id="form">
+    <textarea rows="8" name="text" placeholder="Text"></textarea>
+    <button type="submit">Submit</button>
+</form>
+<div id="container">
+    <p>Placeholder</p>
+</div>
